Fixed toolbar button alignment.

--- a/axelor-web/src/main/webapp/css/main.css
+++ b/axelor-web/src/main/webapp/css/main.css
@@ -677,7 +677,7 @@ img.prefix-icon {
 
 .record-toolbar .button-menu a.btn {
 	padding: 4px 8px 4px;
-	margin-top: 4px;
+	margin-top: 5px;
 	color: #333;
 }
 
